--- a/test.html
+++ b/test.html
@@ -2,56 +2,179 @@
 <html lang="ko">
    <head>
       <meta charset="UTF-8" />
-      <title>ex</title>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Document</title>
       <style>
-         body {
-            margin: 0;
-            font-family: sans-serif;
+         h1 {
+            margin: 20px 0 0 10px;
          }
-         header {
-            width: 100%;
-            height: 50px;
-            background: #333;
+         .boxsectionarea {
+            border: 1px silid red;
+            margin: 0 auto;
+            max-width: 1200px;
+         }
+         .boxsection {
+            display: flex;
+            gap: 20px;
+         }
+         .boxwrap_wrap {
+            border: 1px solid tan;
             position: relative;
-            min-width: 600px;
+            height: 500px;
          }
-         header div a {
-            padding: 0 24px;
-            color: #ccc;
+         .containbox {
+            width: 190px;
+            height: 230px;
+            display: flex;
          }
-         .logo {
+         .boxinner {
+            position: relative;
+            top: 50%;
+            transform: translateY(-50%);
+         }
+         .boxt {
+            background: #666;
+            height: 8px;
+            width: 177px;
+            transform: skew(-56deg, 20deg);
+            position: relative;
+            left: 6px;
+            z-index: 1;
+         }
+         .box3d {
+            background: #222;
+            transform: skewY(20deg);
+            position: relative;
+            padding: 10px;
+            color: white;
+            height: 210px;
+            width: 700px;
+         }
+         .box3d p {
+            display: none;
+         }
+         .boxr {
+            position: relative;
+            z-index: 2;
+            left: -1px;
+            top: 28px;
+            width: 55px;
+            height: 231px;
+            background: #aaa;
+            transform: skewY(-35deg);
+         }
+
+         .boxwrap_wrap .box_link:nth-child(odd) {
+            border: 1px solid red;
             position: absolute;
-            left: 50%;
-            transform: translate(-50%);
+            top: -130px;
          }
-         .menu_l {
-            float: left;
+         .boxwrap_wrap .box_link:nth-child(even) {
+            border: 1px solid red;
+            position: absolute;
+            bottom: -130px;
          }
-         .menu_r {
-            float: right;
-         }
-         a {
-            display: inline-block;
-            line-height: 50px;
-            text-decoration: none;
-            transition: 0.3s ease;
-         }
-         a:hover {
-            background: #555;
+         @media (max-width: 1200px) {
+            .containbox {
+               width: inherit;
+               height: inherit;
+            }
+            .boxsection {
+               display: flex;
+               flex-direction: column;
+            }
+            .box_link,
+            .boxt,
+            .boxr {
+               display: none;
+            }
+            .box3d {
+               transform: inherit;
+               background: white;
+               color: #333;
+               display: flex;
+               align-items: center;
+               border: 1px solid #ddd;
+               border-radius: 10px;
+               height: inherit;
+            }
+            .box3d p {
+               display: block;
+               position: relative;
+               padding: 14px 20px;
+            }
+            .box3d p::after {
+               content: "";
+               position: absolute;
+               left: 0;
+               top: 50%;
+               transform: translateY(-50%);
+               height: 100%;
+               border-left: 1px solid #000;
+            }
+            .box3d a {
+               display: block;
+            }
+            .box3d h1 {
+               padding-right: 20px;
+               margin: 0;
+            }
+            .boxwrap_wrap {
+               height: inherit;
+               border: none;
+            }
+            .boxinner {
+               position: static;
+               transform: inherit;
+            }
          }
       </style>
    </head>
    <body>
-      <header>
-         <div class="menu_l">
-            <a href="">About</a>
-            <a href="">Item</a>
-         </div>
-         <div class="logo"><a href="">LOGO</a></div>
-         <div class="menu_r">
-            <a href="">Contact</a>
-            <a href="">Login</a>
-         </div>
-      </header>
+      <div class="boxsectionarea">
+         <section class="boxsection">
+            <div class="boxwrap_wrap">
+               <div class="boxinner">
+                  <div class="box_link">
+                     <a href="#">자세히보기</a>
+                  </div>
+                  <div class="boxwrap">
+                     <div class="boxt"></div>
+                     <div class="containbox">
+                        <div class="box3d">
+                           <h1>heading</h1>
+                           <p>
+                              <small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quam labore ullam nulla sequi.</small>
+                              <a href="">자세히보기</a>
+                           </p>
+                        </div>
+                        <div class="boxr"></div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="boxwrap_wrap">
+               <div class="boxinner">
+                  <div class="boxwrap">
+                     <div class="boxt"></div>
+                     <div class="containbox">
+                        <div class="box3d">
+                           <h1>heading</h1>
+                           <p>
+                              <small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quam labore ullam nulla sequi.</small>
+                              <a href="">자세히보기</a>
+                           </p>
+                        </div>
+                        <div class="boxr"></div>
+                     </div>
+                  </div>
+                  <div class="box_link">
+                     <a href="#">자세히보기</a>
+                  </div>
+               </div>
+            </div>
+         </section>
+      </div>
    </body>
 </html>
