--- a/box_chart.html
+++ b/box_chart.html
@@ -5,6 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Document</title>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
       <style>
          h1 {
             margin: 20px 0 0 10px;
@@ -16,12 +17,28 @@
          }
          .boxsection {
             display: flex;
-            gap: 20px;
+            /* gap: 20px; */
          }
          .boxwrap_wrap {
-            border: 1px solid tan;
+            border: 1px solid #eee;
+            padding: 1rem;
             position: relative;
-            height: 500px;
+            height: 650px;
+         }
+         .boxwrap_wrap:nth-child(1) {
+            top: 80px;
+         }
+         .boxwrap_wrap:nth-child(2) {
+            top: 40px;
+         }
+         .boxwrap_wrap:nth-child(3) {
+            top: 0;
+         }
+         .boxwrap_wrap:nth-child(4) {
+            top: -40px;
+         }
+         .boxwrap_wrap:nth-child(5) {
+            top: -80px;
          }
          .containbox {
             width: 190px;
@@ -54,6 +71,12 @@
          .box3d p {
             display: none;
          }
+         .box3d small {
+            font-size: 16px;
+         }
+         .box3d a {
+            padding: 6px 0 0;
+         }
          .boxr {
             position: relative;
             z-index: 2;
@@ -64,16 +87,57 @@
             background: #aaa;
             transform: skewY(-35deg);
          }
+         .box_link small {
+            display: block;
+            font-size: 20px;
+         }
+         .box_link a {
+            font-size: 20px;
+            padding: 14px 0;
+            display: inline-block;
+            text-decoration: none;
+            font-weight: 600;
+         }
+         .box_link a::after {
+            font-family: "bootstrap-icons";
+            content: "\F138";
+            vertical-align: text-bottom;
+            padding-left: 10px;
+         }
 
          .boxwrap_wrap .box_link:nth-child(odd) {
-            border: 1px solid red;
+            border-left: 3px solid #888;
             position: absolute;
-            top: -130px;
+            top: -200px;
+            padding-left: 14px;
+            width: 300px;
+         }
+         .box_link:nth-child(odd)::before {
+            content: "";
+            position: absolute;
+            left: -1px;
+            bottom: 0;
+            z-index: -1;
+            border-left: 2px solid #ddd;
+            height: 200px;
+            top: 90px;
          }
          .boxwrap_wrap .box_link:nth-child(even) {
-            border: 1px solid red;
+            border-left: 3px solid #888;
             position: absolute;
-            bottom: -130px;
+            bottom: -200px;
+            padding-left: 14px;
+            width: 300px;
+         }
+         .box_link:nth-child(even)::before {
+            content: "";
+            position: absolute;
+            left: -2px;
+            bottom: 0;
+            z-index: -1;
+            border-left: 2px solid #ddd;
+            height: 200px;
+            bottom: 90px;
          }
          @media (max-width: 1200px) {
             .containbox {
@@ -95,14 +159,14 @@
                color: #333;
                display: flex;
                align-items: center;
-               border: 1px solid #ddd;
+               border: 2px solid #aaa;
                border-radius: 10px;
                height: inherit;
             }
             .box3d p {
                display: block;
                position: relative;
-               padding: 14px 20px;
+               padding: 4px 20px;
             }
             .box3d p::after {
                content: "";
@@ -137,6 +201,7 @@
             <div class="boxwrap_wrap">
                <div class="boxinner">
                   <div class="box_link">
+                     <small> consectetur adipisicing elit. Enim quam labore ullam nulla sequi.</small>
                      <a href="#">자세히보기</a>
                   </div>
                   <div class="boxwrap">
@@ -145,7 +210,7 @@
                         <div class="box3d">
                            <h1>heading</h1>
                            <p>
-                              <small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quam labore ullam nulla sequi.</small>
+                              <small> consectetur adipisicing elit. Enim quam labore ullam nulla sequi.</small>
                               <a href="">자세히보기</a>
                            </p>
                         </div>
@@ -162,7 +227,7 @@
                         <div class="box3d">
                            <h1>heading</h1>
                            <p>
-                              <small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quam labore ullam nulla sequi.</small>
+                              <small> consectetur adipisicing elit. Enim quam labore ullam nulla sequi.</small>
                               <a href="">자세히보기</a>
                            </p>
                         </div>
@@ -171,6 +236,49 @@
                   </div>
                   <div class="box_link">
                      <a href="#">자세히보기</a>
+                     <small> consectetur adipisicing elit. Enim quam labore ullam nulla sequi.</small>
+                  </div>
+               </div>
+            </div>
+            <div class="boxwrap_wrap">
+               <div class="boxinner">
+                  <div class="box_link">
+                     <small> consectetur adipisicing elit. Enim quam labore ullam nulla sequi.</small>
+                     <a href="#">자세히보기</a>
+                  </div>
+                  <div class="boxwrap">
+                     <div class="boxt"></div>
+                     <div class="containbox">
+                        <div class="box3d">
+                           <h1>heading</h1>
+                           <p>
+                              <small> consectetur adipisicing elit. Enim quam labore ullam nulla sequi.</small>
+                              <a href="">자세히보기</a>
+                           </p>
+                        </div>
+                        <div class="boxr"></div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="boxwrap_wrap">
+               <div class="boxinner">
+                  <div class="boxwrap">
+                     <div class="boxt"></div>
+                     <div class="containbox">
+                        <div class="box3d">
+                           <h1>heading</h1>
+                           <p>
+                              <small> consectetur adipisicing elit. Enim quam labore ullam nulla sequi.</small>
+                              <a href="">자세히보기</a>
+                           </p>
+                        </div>
+                        <div class="boxr"></div>
+                     </div>
+                  </div>
+                  <div class="box_link">
+                     <a href="#">자세히보기</a>
+                     <small> consectetur adipisicing elit. Enim quam labore ullam nulla sequi.</small>
                   </div>
                </div>
             </div>
